@@ -1,3 +1,5 @@
+* Allow changes to editable tree checkboxes without first selecting the line
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Support link button on form
